# LinguagemC_LuisDamas

./: CMakeLists.txt  Filosofia_Extras.C  Introducao.C  README.md
Capitulo1/: MeuPrimeiroProg.C  Tarefa.C
Capitulo2/: Tarefa.C  TiposDados-Parte1.C  TiposDados-Parte2.C
Capitulo3/: Testes_E_Condicoes_Parte1.C  Testes_E_Condicoes_Parte2.C  Testes_E_Condicoes_Parte3.C
Capitulo4/: Lacos-Parte1.C  Lacos-Parte2.C  Lacos-Parte3.C  LacosInf_Opera.C
Capitulo5/: Funcoes_Parte1.C  Funcoes_Parte2.C  Funcoes_Parte3.C
Capitulo6/: Vetores_Parte1.C  Vetores_Parte2.C  Vetores_Parte3.C
Capitulo7/: Strings_Parte1.C  Strings_Parte2.C
